<resources>
    <string name="app_name">Driver Attentiveness</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Signup</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_welcome">Welcome</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>

    <!-- String Home -->
    <string name="home_title">Hi!, John</string>
    <string name="home_subTitle">How was ur day?</string>
    <string name="home_statistic">Safety Driving Metrics</string>
    <string name="home_subStatistic">Monthly analysis of driving behaviour</string>
    <string name="home_TitleArticle">Hot News</string>
    <string name="home_SubArticle">Recommend news in a month!</string>

    <string name="home_StatisticDistance">Distance Covered</string>
    <string name="home_StatisticBehaviour">Behaviour Score</string>
    <string name="home_StatisticAlert">Alert</string>
    <string name="home_StatisticSafety">Safety Score</string>
    <string name="home_StatisticKilometer">1452 KM</string>
    <string name="home_StatisticAlertS">160</string>
    <string name="home_StatisticPercent">70%</string>
    <string name="home_StatisticSafetyS">89</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="driver_assist">Driver Assistant</string>
    <string name="maps">Maps</string>
    <string name="guidance">Guidance</string>

    <!-- maps   -->
    <string name="start_driving">Start Driving</string>
    <string name="stop_running">Stop Running</string>
    <string name="start_point">Start Point</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="setting_name">Name</string>
    <string name="setting_age">Age</string>
    <string name="setting_address">Address</string>
    <string name="setting_password">Password</string>
    <string name="setting_phone">Phone Number</string>
    <string name="title_menu_1">Membantu memonitoring supir</string>
    <string name="desc_menu_1">Membantu pengendara untuk meningkatkan kesadaran supir agar menghindari kecelakaan</string>
    <string name="get_started">Get Started</string>
    <string name="register_text1">Don\'t have an account?</string>
    <string name="register_text2">Register here</string>
    <string name="input_validation_error">Please input name and password</string>
    <string name="update_success">Update Success</string>
    <string name="update_failed">Update Failed</string>
    <string name="google_maps_key">AIzaSyAMdD39FxCzxDrKUiw8fxamuwuciEvY_Sw</string>
    <string name="need_more_char_8">Password needs at least 8 characters</string>


    <!--Recycler View Article Item-->
    <string name="describe_img">Image Header</string>
    <string name="describe_tv">Textview Content</string>
    <string name="action_menu">Action</string>
    <string name="guest_greeting">Hi, Guest</string>

    <string name="sign_welcome_title">Hi,</string>
    <string name="sign_welcome_titles">Welcome Back !</string>

    <string name="title_menu_2">Membantu memonitoring supir</string>
    <string name="desc_menu_2">Memberikan alarm yang berfungsi untuk meningkatkan kewaspadaan dan mengurangi risiko terjadinya kecelakaan.</string>
    <string name="title_menu_3">Membantu melacak supir</string>
    <string name="desc_menu_3">Melacak perjalanan supir</string>

    <!-- camera -->
    <string name="status_camera">Status</string>

        <!-- Titles Guidance -->
        <string name="title_speed_limit">Speed Limit Regulations</string>
        <string name="title_defensive_driving">Defensive Driving Tips</string>
        <string name="title_vehicle_maintenance">Vehicle Maintenance</string>
        <string name="title_road_conditions">Awareness of Road Conditions</string>
        <string name="title_emergency_readiness">Emergency Readiness</string>

        <!-- Descriptions Guidance-->
        <string name="desc_speed_limit">Follow posted speed limits to prevent accidents.</string>
        <string name="desc_defensive_driving">Stay alert and anticipate potential hazards.</string>
        <string name="desc_vehicle_maintenance">Ensure your vehicle is in top condition before driving.</string>
        <string name="desc_road_conditions">Be aware of weather and road conditions to adjust your driving.</string>
        <string name="driver_safety_guidelines">Driver Safety Guidelines</string>
        <string name="essential_rules_for_ensuring_road_safety">Essential rules for ensuring road safety</string>
        <string name="desc_emergency_readiness">Prepare for emergencies by carrying essential safety equipment and knowing evacuation procedures.</string>
        <string name="already_have_an_account">Already have an account?</string>

</resources>