<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.guidance.GuidanceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/safetyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_safety_guidelines"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/essential_rules_for_ensuring_road_safety"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/safetyTitle" />

        <View
            android:id="@+id/topDevider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D9D9D9"
            app:layout_constraintBottom_toTopOf="@+id/regulation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/regulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description">

            <!-- Image on the left -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="top"
                android:src="@drawable/image_speed_limit" />

            <!-- Text content on the right -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/firstItemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_speed_limit"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="top"/>

                <TextView
                    android:id="@+id/firstItemDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/desc_speed_limit"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D9D9D9"
            app:layout_constraintTop_toBottomOf="@+id/regulation"
            app:layout_constraintBottom_toTopOf="@+id/regulation2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <LinearLayout
            android:id="@+id/regulation2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regulation">

            <!-- Image on the left -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="top"
                android:scaleType="centerCrop"
                android:src="@drawable/image_defensive_driving" />

            <!-- Text content on the right -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                android:gravity="top">

                <TextView
                    android:id="@+id/secItemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_defensive_driving"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/secItemDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/desc_defensive_driving"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D9D9D9"
            app:layout_constraintTop_toBottomOf="@+id/regulation2"
            app:layout_constraintBottom_toTopOf="@+id/regulation3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <LinearLayout
            android:id="@+id/regulation3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regulation2">

            <!-- Image on the left -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="top"
                android:scaleType="centerCrop"
                android:src="@drawable/image_vehicle_maintenance" />

            <!-- Text content on the right -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                android:gravity="top">

                <TextView
                    android:id="@+id/thirdItemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_vehicle_maintenance"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/thirdItemDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/desc_vehicle_maintenance"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D9D9D9"
            app:layout_constraintTop_toBottomOf="@+id/regulation3"
            app:layout_constraintBottom_toTopOf="@+id/regulation4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <LinearLayout
            android:id="@+id/regulation4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regulation3">

            <!-- Image on the left -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="top"
                android:scaleType="centerCrop"
                android:src="@drawable/image_awarness_road" />

            <!-- Text content on the right -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                android:gravity="top">

                <TextView
                    android:id="@+id/fourthItemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_road_conditions"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fourthItemDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/desc_road_conditions"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#D9D9D9"
            app:layout_constraintTop_toBottomOf="@+id/regulation4"
            app:layout_constraintBottom_toTopOf="@+id/regulation5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <LinearLayout
            android:id="@+id/regulation5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regulation4">

            <!-- Image on the left -->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="top"
                android:scaleType="centerCrop"
                android:src="@drawable/image_emergency_rediness" />

            <!-- Text content on the right -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                android:gravity="top">

                <TextView
                    android:id="@+id/fifthItemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_emergency_readiness"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fifthItemDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/desc_emergency_readiness"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>