<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b79bb"
    tools:context=".ui.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:background="@drawable/image_backg_ai"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="32dp">

        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="8dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_apps" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-70dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_welcome_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-20dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_welcome_titles"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <!--        <ImageView-->
        <!--            android:id="@+id/ivMaskot"-->
        <!--            android:layout_marginStart="-100dp"-->
        <!--            android:layout_width="150dp"-->
        <!--            android:layout_height="150dp"-->
        <!--           android:background="@drawable/login_maskot" />-->

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/midnight_blue"
                android:textSize="32sp"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please login with your account"
                android:alpha="0.7"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email address"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <com.dicoding.intermediatefirst.view.EmailEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/done_icon"/>
            <TextView
                android:id="@+id/emailError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:visibility="gone" />


            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <com.example.driverattentiveness.ui.PasswordEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon_invisible"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Login"
                app:cornerRadius="32dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start|center_vertical">

                <TextView
                    android:id="@+id/tvRegister1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text1" />

                <TextView
                    android:id="@+id/tvRegister2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text2"
                    android:textStyle="bold"
                    android:layout_marginStart="2dp"/>

            </LinearLayout>


            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
        </LinearLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>